--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -4,23 +4,33 @@
     gap: 15px;
     align-items: center;
     justify-content: center;
+    
 }
 
 .nav{
     display: flex;
+    
 }
 
 .nav li {
-    margin-right: 20px; 
+    margin-right: 15px; 
+   
 }
 
 .nav li a {
     color: white;
     text-decoration: none;
+
+}
+
+.nav li a:hover {
+    color: yellow;
 }
 
 .btn-nav {
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
+    
+   
 }
