--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -8,6 +8,7 @@
     color: white;
     position: relative;
     z-index: 1000;
+    
 }
 
 .navbar-content {
@@ -15,6 +16,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    margin-right: 170px;
 }
 
 .nav-links {
