creating Card components for Brand page

--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -47,7 +47,7 @@
 }
 
 .login {
-    background-color: yellow;
+    background-color: #f39c12;
     border-radius: 5px;
     border: solid black;
     padding: 5px 5px;
