--- a/src/Card/brand.css
+++ b/src/Card/brand.css
@@ -17,12 +17,17 @@
 }
 
 .btn-all-categories {
-    background-color: #f39c12;
-    color: white;
+    background-color: white;
+    color: black;
     padding: 10px 15px;
     text-decoration: none;
     border-radius: 5px;
+    border: solid #f39c12
 }
+
+.btn-all-categories:hover {
+    background-color: #f39c12;
+ }
 
 .divider {
     height: 2px;
