--- a/src/Card/product.css
+++ b/src/Card/product.css
@@ -46,10 +46,9 @@
 }
 
 .product img {
-    width: 100%;
+    width: 200px;
     height: 250px;
     object-fit: cover;
-    
 }
 
 .product-buttons {
