--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -3,14 +3,15 @@
   align-items: center;
   justify-content: center;
   gap: 50px;
-  margin: 40px auto;
+  margin: 100px auto;
   max-width: 1200px;
 }
 
 .about-text {
   flex: 1;
   padding: 20px;
-  border: solid ;
+  border: solid #f39c12;
+  
 }
 
 .about-text h2 {
@@ -30,11 +31,23 @@
 }
 
 .about-image img {
-  width: 100%;
+  width: 550px ;
   height: auto;
-  max-width: 500px;
+  
 }
 
+.get-in-touch-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #f39c12;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+  }
 .get-in-touch-btn:hover {
-  background-color: #e67e22;
+  
+  
 }
