--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -3,8 +3,10 @@
   align-items: center;
   justify-content: center;
   gap: 50px;
-  margin: 100px auto;
+  margin: 150px auto;
   max-width: 1200px;
+  margin-left: 275px;
+  
 }
 
 .about-text {
@@ -36,11 +38,12 @@
   justify-content: center;
 }
 
+
 .about-image img {
-  width: 550px ;
-  height: auto;
-  
-}
+    width: 100%; 
+    height: auto;
+    object-fit: cover;
+  } 
 
 .get-in-touch-btn {
     margin-top: 20px;
@@ -62,7 +65,7 @@
    
 }
 
-.divider {
+.divider-about {
     height: 2px;
     background-color: white;
     margin-bottom: 20px; 
