--- a/src/pages/brand/brand.css
+++ b/src/pages/brand/brand.css
@@ -32,7 +32,7 @@
    background-color: #f39c12;
 }
 
-.divider {
+.divider-brand {
     height: 2px;
     background-color: #f39c12;
     margin-bottom: 20px; 
