--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -25,6 +25,8 @@
 
 h2 {
     margin-bottom: 20px; 
+    display: flex;
+    justify-content: center;
 }
 
 label {
@@ -51,6 +53,8 @@ input[type="password"] {
     border-radius: 5px; 
     cursor: pointer; 
     font-size: 16px; 
+    display: flex;
+    justify-content: center;
 }
 
 .btn__register:hover {
