--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -4,11 +4,12 @@
     top: 50%; 
     left: 50%; 
     transform: translate(-50%, -50%); 
-    background-color: rgba(255, 255, 255, 0.8); 
+    background-color: black; 
     padding: 20px;
     border-radius: 8px; 
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); 
     z-index: 10; 
+    border: solid #f39c12;
 }
 
 
@@ -42,12 +43,14 @@ input[type="password"] {
     margin-bottom: 15px; 
     border: 1px solid #ccc; 
     border-radius: 4px; 
+    
+    
 }
 
 
 .btn__register {
-    background-color: #f39c12; 
-    color: white; 
+    background-color: white; 
+    color: black;     
     border: none; 
     padding: 10px; 
     border-radius: 5px; 
@@ -55,6 +58,7 @@ input[type="password"] {
     font-size: 16px; 
     display: flex;
     justify-content: center;
+    border: solid #f39c12;
 }
 
 .btn__register:hover {
