--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -4,7 +4,7 @@
     top: 50%; 
     left: 50%; 
     transform: translate(-50%, -50%); 
-    background-color: black; 
+    background-color: white; 
     padding: 20px;
     border-radius: 8px; 
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); 
@@ -28,11 +28,13 @@ h2 {
     margin-bottom: 20px; 
     display: flex;
     justify-content: center;
+    color: black;
 }
 
 label {
     display: block; 
     margin-bottom: 5px; 
+    color: black;
 }
 
 input[type="text"],
@@ -42,14 +44,14 @@ input[type="password"] {
     padding: 10px; 
     margin-bottom: 15px; 
     border: 1px solid #ccc; 
-    border-radius: 4px; 
+    border-radius: 6px; 
     
     
 }
 
 
 .btn__register {
-    background-color: white; 
+    background-color: #f39c12; 
     color: black;     
     border: none; 
     padding: 10px; 
@@ -57,8 +59,10 @@ input[type="password"] {
     cursor: pointer; 
     font-size: 16px; 
     display: flex;
-    justify-content: center;
     border: solid #f39c12;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
 }
 
 .btn__register:hover {
@@ -72,6 +76,7 @@ input[type="password"] {
 
 .have__account small {
     margin-right: 5px; 
+    color: black;
 }
 
 .have__account a {
