--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -10,6 +10,7 @@
     align-items: center;
     z-index: 1000;
     backdrop-filter: blur(1px);
+    
 }
 
 .login__container {
@@ -18,6 +19,7 @@
     padding: 20px;
     max-width: 400px;
     width: 100%;
+    border: solid #f39c12
 }
 
 .login__form {
