--- a/src/pages/contact/contactForm.css
+++ b/src/pages/contact/contactForm.css
@@ -1,75 +1,73 @@
-.form-overlay {
+.contact-form-overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent background */
-    backdrop-filter: blur(5px); /* Background blur */
     z-index: 10;
+    
 }
 
-.form-container {
-    background-color: rgba(255, 255, 255, 0.95); 
+.contact-form-container {
+    background-color: white;
     padding: 20px;
     border-radius: 8px;
-    max-width: 400px;
-    width: 100%;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-    text-align: center;
+    width: 90%;
+    max-width: 500px;
+    position: relative;
+    text-align: left;
+    border: solid #f39c12;
 }
 
-.get-touch {
-    margin: 0;
+.contact-form-title {
     font-size: 24px;
-    font-weight: bold;
+    text-align: center;
     color: black;
+    margin: 0;
 }
 
-.title-line {
-    margin: 10px 0 20px;
-    border: none;
-    border-top: 2px solid #f39c12; /* Colored line below the title */
+.title-underline {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    height: 1px;
+    background-color: #f39c12;
+    margin: 10px auto 20px;
 }
 
 label {
     display: block;
+    font-weight: bold;
     margin-bottom: 5px;
-    text-align: left;
 }
 
 input[type="text"],
 input[type="email"],
 textarea {
     width: 100%;
-    padding: 8px;
+    padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-textarea {
-    resize: none;
-}
-
-.btn-send {
-    background-color: #f39c12;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
+.send-button {
     width: 100%;
+    padding: 10px;
+    background-color:#f39c12;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
     transition: background-color 0.3s;
 }
 
-.btn-send:hover {
-    background-color: #e67e22;
+.send-button:hover {
+    background-color: white;
+    color: #f39c12;
+    border: solid #f39c12;
 }
