--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -1,4 +1,3 @@
-
 .navbar {
     background-color: black;
     padding: 10px 20px;
@@ -8,8 +7,8 @@
     color: white;
     position: relative;
     z-index: 1000;
-    
 }
+
 
 .navbar-content {
     display: flex;
@@ -18,6 +17,13 @@
     width: 100%;
     margin-right: 170px;
 }
+
+
+.logo {
+    height: 100px; 
+    margin-left: 160px;
+}
+
 
 .nav-links {
     list-style: none;
@@ -39,30 +45,29 @@
     color: yellow; 
 }
 
+
 .btn {
     display: flex;
     gap: 10px;
     margin-left: auto; 
-    
 }
 
-.user {
+
+.user, .ShoppingCart {
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    border: 1px solid #f39c12;
+    padding: 12px;
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.user:hover, .ShoppingCart:hover {
     background-color: #f39c12;
-    border-radius: 50px;
-    border: solid black;
-   
-    
-}
-
-.ShoppingCart {
-    background-color: white;
-    border-radius: 50px;
-    border: solid black;
-    padding: 5px 5px;
-}
-
-.logo {
-    height: 100px; 
-    
-    margin-left: 160px;
+    transform: scale(1.1);
 }
