--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -1,3 +1,17 @@
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* леко затъмнение */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+
 
 .form-container {
     position: fixed; 
