--- a/src/pages/partsSearch/PartsSearch.css
+++ b/src/pages/partsSearch/PartsSearch.css
@@ -26,11 +26,14 @@
 
 
 .search-form {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
 }
 
 .form-group {
-    margin: 10px 0;
+    margin: 0 10px;
 }
 
 .search-button {
