working on parts search

--- a/src/pages/partsSearch/PartsSearch.css
+++ b/src/pages/partsSearch/PartsSearch.css
@@ -28,9 +28,7 @@
 
 .search-form {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
+    margin: 20px 0 10px 30px;
     gap: 30px;
     
     
