--- a/src/pages/brandCategory/brandCategory.css
+++ b/src/pages/brandCategory/brandCategory.css
@@ -50,7 +50,7 @@
 
 .category-grid-brand {
     display: grid;
-    grid-template-columns: repeat(6, 1fr); 
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 15px;
     margin: 60px 300px 50px 300px;
 }
@@ -64,6 +64,12 @@
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: flex-end; 
+    text-align: center; 
+    margin-top: 5px;
 }
 
 .category-item-brand:hover {
@@ -75,6 +81,9 @@
     height: auto;
     border-radius: 8px; 
     margin-bottom: 10px; 
+    border-radius: 8px; 
+    margin-bottom: 10px; 
+    max-height: 100px;
 }
 
 
