--- a/src/pages/brandDetails/brandDetails.css
+++ b/src/pages/brandDetails/brandDetails.css
@@ -2,22 +2,29 @@
 .brand-details {
     padding: 20px;
     text-align: center;
-    margin: 40px 200px 40px 200px
+    margin: 40px 180px 40px 180px
 }
 
 
 .brand-title {
-    font-size: 2.5rem;
-    color: #333;
+    font-size: 24px;
+    color:black;
     margin-bottom: 10px;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
+   
 }
 
 
 .title-underline {
-    width: 50%;
-    height: 4px;
-    background-color: black;
-    margin: 0 auto 20px auto;
+    width: 100%;
+    height: 2px;
+    background-color: #f39c12;
+   
+
 }
 
 
