--- a/src/pages/brandDetails/yearDetails.css
+++ b/src/pages/brandDetails/yearDetails.css
@@ -1,9 +1,12 @@
-.year-details {
+
+.model-card { 
+    padding: 10px;
     text-align: center;
-    margin-top: 20px;
 }
 
-.year-details img {
-    width: 80%;
-    margin-top: 20px;
+.model-card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
+
