--- a/src/pages/brandDetails/yearDetails.css
+++ b/src/pages/brandDetails/yearDetails.css
@@ -33,6 +33,12 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
+.year-underline{
+    height: 2px;
+    background-color: #f39c12;
+    margin-bottom: 20px; 
+    margin-right: 200px;
+}
 
 .year-image {
     width: 60%;
@@ -64,3 +70,4 @@
     width: 100%;
     left: 0;
 }
+
