--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -71,3 +71,55 @@
     background-color: #f39c12;
     transform: scale(1.1);
 }
+
+
+/* css за количката с продукти */
+.cart-dropdown {
+    position: absolute;
+    right: 10px;
+    top: 60px;
+    width: 300px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding: 10px;
+    z-index: 1000;
+    opacity: 0; 
+    transform: translateY(-20px); 
+    transition: opacity 0.3s ease, transform 0.3s ease; 
+    
+}
+
+.cart-dropdown.show {
+    opacity: 1; 
+    transform: translateY(0); 
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.cart-item-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.cart-item-info {
+    flex: 1;
+}
+
+.remove-item {
+    background: none;
+    border: none;
+    color: red;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.remove-item:hover {
+    color: darkred;
+}
