--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -87,6 +87,8 @@
     opacity: 0; 
     transform: translateY(-20px); 
     transition: opacity 0.3s ease, transform 0.3s ease; 
+    margin-top: 15px;
+    margin-right: 170px;
     
 }
 
