--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -2,6 +2,7 @@
     background-color: black;
     padding: 10px 20px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     color: white;
@@ -124,4 +125,33 @@
 
 .remove-item:hover {
     color: darkred;
+}
+
+
+/* CSS за инфо бара */
+.info-bar {
+    background-color: black; 
+    color: wheat;
+    padding: 10px 0;
+    text-align: center;
+    overflow: hidden; 
+    position: relative;
+    width: 70%;
+}
+
+.info-text {
+    display: flex;
+    white-space: nowrap; 
+    animation: scroll 10s linear infinite; 
+    font-size: 16px;
+    font-weight: bold;
+}
+
+@keyframes scroll {
+    from {
+        transform: translateX(80%); 
+    }
+    to {
+        transform: translateX(-80%); 
+    }
 }
