--- a/src/pages/brandDetails/partsDetails.css
+++ b/src/pages/brandDetails/partsDetails.css
@@ -1,17 +1,82 @@
+.parts-details {
+    padding: 20px;
+    text-align: center;
+    margin: 40px 180px;
+}
+
+.parts-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: black;
+}
+
+.parts-underline {
+    height: 2px;
+    background-color: #f39c12;
+    margin: 20px auto;
+    width: 60%;
+}
+
 .parts-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(5, 1fr); /* 5 колони */
     gap: 20px;
+    margin-top: 20px;
 }
+
 .parts-card {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.parts-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+
 .parts-image {
     width: 100%;
     height: auto;
     border-radius: 8px;
+    margin-bottom: 10px;
 }
+
 .parts-name {
     font-size: 1rem;
-    margin-top: 8px;
+    color: #000000;
+    font-weight: bold;
+    text-align: center;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination-btn {
+    padding: 10px 20px;
+    margin: 0 10px;
+    background-color: #f39c12;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.pagination-btn:hover {
+    background-color: #d87e05;
+}
+
+.pagination-btn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
 }
