--- a/src/pages/brandDetails/partsDetails.css
+++ b/src/pages/brandDetails/partsDetails.css
@@ -6,16 +6,19 @@
 
 .parts-title {
     font-size: 24px;
-    font-weight: bold;
+    color:black;
     margin-bottom: 10px;
-    color: black;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 25px;
 }
 
 .parts-underline {
+    width: 100%;
     height: 2px;
     background-color: #f39c12;
-    margin: 20px auto;
-    width: 60%;
 }
 
 .parts-grid {
