--- a/src/pages/brandDetails/partsDetails.css
+++ b/src/pages/brandDetails/partsDetails.css
@@ -45,8 +45,9 @@
 }
 
 .parts-image {
-    width: 100%;
-    height: auto;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
     border-radius: 8px;
     margin-bottom: 10px;
 }
@@ -106,7 +107,7 @@
     margin-top: 20px;
 }
 
-.cart-btn, .search-btn {
+.cart-btn{
     background-color: f39c12; 
     color: #fff; 
     border: none;
@@ -120,6 +121,23 @@
     cursor: pointer;
     transition: transform 0.3s ease, background-color 0.3s ease;
     margin-left: 10px;
+}
+
+.srh-btn {
+    background-color: f39c12; 
+    color: #fff; 
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    cursor: pointer;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .cart-btn{
