--- a/src/pages/brandDetails/partsDetails.css
+++ b/src/pages/brandDetails/partsDetails.css
@@ -25,7 +25,7 @@
     display: grid;
     grid-template-columns: repeat(5, 1fr); /* 5 колони */
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .parts-card {
@@ -62,7 +62,7 @@
 .pagination {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .pagination-btn {
@@ -147,7 +147,7 @@
 
 
 
-.cart-btn:hover, .search-btn:hover {
+.cart-btn:hover, .srh-btn:hover {
     background-color: #005a9e; 
     transform: scale(1.1); 
 }
