--- a/src/pages/brandDetails/partsDetails.css
+++ b/src/pages/brandDetails/partsDetails.css
@@ -23,7 +23,7 @@
 
 .parts-grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr); /* 5 колони */
+    grid-template-columns: repeat(5, 1fr); 
     gap: 20px;
     margin-top: 40px;
 }
@@ -154,5 +154,77 @@
 .parts-info button:focus {
     outline: none;
     box-shadow: 0 0 0 3px rgba(0, 120, 212, 0.5); 
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(5px);
+    z-index: 1000;
+}
+
+.modal-content {
+    background: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    width: 400px;
+    text-align: center;
+    position: relative;
+}
+
+.modal-image {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 15px;
+}
+
+.modal-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.modal-price {
+    font-size: 16px;
+    color: #0078d4;
+    margin-bottom: 10px;
+}
+
+.modal-description {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+.modal-cart-btn {
+    background: #f39c12;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: transparent;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    color: #333;
+}
+
+.modal-close-btn:hover {
+    color: #000;
 }
 
