--- a/src/pages/brandDetails/partsDetails.css
+++ b/src/pages/brandDetails/partsDetails.css
@@ -170,12 +170,14 @@
 }
 
 .modal-content {
+    display: flex;
+    flex-direction: row; 
+    align-items: flex-start; 
+    gap: 20px; 
     background: white;
     border-radius: 10px;
     width: 60%;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
     position: relative;
 }
 
@@ -214,12 +216,11 @@
     height: auto;
 }
 
-.modal-details {
-    flex-grow: 1;
-    margin-left: 20px;
+.modal-detailss {
+    flex-grow: 1; 
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    flex-direction: column; 
+    justify-content: flex-start; 
 }
 
 .modal-title {
