--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -147,6 +147,31 @@
     font-weight: bold;
 }
 
+.FaHeart{
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    border: 1px solid #f39c12;
+    padding: 12px;
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.FaHeart a {
+    color: inherit; 
+    text-decoration: none; 
+}
+
+.FaHeart:hover{
+    background-color: #f39c12;
+    transform: scale(1.1);
+}
+
+
 @keyframes scroll {
     from {
         transform: translateX(80%); 
