--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -21,8 +21,9 @@
 
 
 .logo {
-    height: 80px; 
-    margin-left: 160px;
+    height: 90px; 
+    margin-left: 250px;
+    margin-top: 20px;
 }
 
 
