--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -172,23 +172,28 @@
     transform: scale(1.1);
 }
 
-.FaSignOutAlt{
-    background-color: black;
-    color: white;
-    border-radius: 50%;
-    border: 1px solid #f39c12;
-    padding: 12px;
-    font-size: 14px;
-    cursor: pointer;
+.profile-section {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 0.3s, transform 0.3s;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-.FaSignOutAlt:hover {
-    background-color: #f39c12;
-    transform: scale(1.1);
+.profile-header {
+    font-weight: bold;
+    margin-bottom: 5px;
+    font-size: 10px;
+}
+
+.greeting,
+.username {
+    margin: 0;
+    font-size: 1px;
+    color: #333;
+}
+
+.chevron-down {
+    font-size: 12px;
+    margin-left: 5px;
 }
 
 
