--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -187,15 +187,90 @@
 .greeting,
 .username {
     margin: 0;
-    font-size: 1px;
-    color: #333;
+    font-size: 10px;
+    color: white;
 }
 
 .chevron-down {
     font-size: 12px;
-    margin-left: 5px;
+    margin-left: 3px;
+   
 }
 
+.profile-section {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.profile-header {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    color: #fdfdfd;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%; /* Позиционира менюто под бутона */
+    left: auto; /* Отменя евентуална стойност на left */
+    right: 0; /* Подравнява менюто спрямо дясната страна на бутона */
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 0;
+    list-style: none;
+    width: 200px; /* Ширина на менюто */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Сянка за менюто */
+    z-index: 1000;
+    margin-top: 5px;
+    
+}
+
+.dropdown-menu li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.dropdown-menu li a {
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+    display: block;
+    padding: 10px;
+    text-align: left;
+}
+
+.dropdown-menu li:first-child a {
+    
+    color: black;
+    
+}
+
+.dropdown-menu li:hover a,
+.logout-btn:hover {
+    background-color: orange;
+    color: white;
+}
+
+.dropdown-menu ul {
+    padding: 0;
+    
+}
+
+
+
+.logout-btn {
+    background-color: transparent;
+    border: none;
+    color: black;
+    cursor: pointer;
+    font-size: 16px;
+    text-align: left;
+    padding: 10px;
+    width: 100%;
+}
 
 @keyframes scroll {
     from {
