working on error msg

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -170,3 +170,9 @@ input[type="password"] {
 .create-account:hover {
     text-decoration: underline;
 }
+
+.error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 10px;
+}
