--- a/src/pages/brandDetails/partsDetails.css
+++ b/src/pages/brandDetails/partsDetails.css
@@ -292,6 +292,7 @@
 }
 
 .FaHeart2:hover {
-    background-color: red;
+    background-color: #f39c12;
     transform: scale(1.1);
+    color: red;
 }
