--- a/src/pages/addAccessory/addaccessory.css
+++ b/src/pages/addAccessory/addaccessory.css
@@ -23,8 +23,8 @@ button:hover {
 }
 
 .add-accessory-form {
-    border: 2px solid #333; /* Дебелина 2px, цвят тъмно сив (#333) */
-    padding: 20px; /* Отстояние от вътрешността на бордера */
-    border-radius: 8px; /* Закръглени ъгли на бордера */
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Лека сянка около формата */
+    border: 2px solid #333; 
+    padding: 20px; 
+    border-radius: 8px; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
   }
