--- a/src/pages/accessories/accessories.css
+++ b/src/pages/accessories/accessories.css
@@ -58,8 +58,9 @@
 }
 
 .category img {
-    width: 100%;
-    height: auto;
+    width: 200px;  
+    height: 200px; 
+    object-fit: cover; 
     border-radius: 5px;
     margin-bottom: 10px;
 }
