--- a/src/pages/brandDetails/yearDetails.css
+++ b/src/pages/brandDetails/yearDetails.css
@@ -31,6 +31,8 @@
     background-color: white;
     border-radius: 8px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    text-decoration: none; 
+    color: inherit;
 }
 
 .year-underline{
@@ -52,6 +54,7 @@
     color: #000000;
     position: relative;
     padding: 10px;
+    text-decoration: none; 
 }
 
 .year-name::after {
